--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <p class="message"></p>
         <div class="team-members">
             <h3>Team Members:</h3>
-            <div class="row" id="teamList"></div>
+            <div class="row row-cols-1 row-cols-md-3 g-4 card-grid" id="teamList"></div>
         </div>
     </div>
+    
 
     <div id="confirmationModal" class="modal">
         <div class="modal-content">
