--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <h3>Team Members:</h3>
             <div class="row row-cols-1 row-cols-md-3 g-4 card-grid" id="teamList"></div>
         </div>
+        <p class="message"></p>
+<p class="pokeballs-left">Pokéballs Left: 20</p>
     </div>
     
 
