--- a/index.html
+++ b/index.html
@@ -13,37 +13,34 @@
         <h2>Pokémon Catcher</h2>
         <div class="form-group">
             <label for="pokemonId">Pokémon ID:</label>
-            <input type="text" id="pokemonId" placeholder="Enter the Pokémon ID">
+            <input type="text" id="pokemonId" placeholder="Ingresá el ID de tu Pokémon">
         </div>
         <div class="form-group">
-            <button id="catchButton" class="btn">Throw a Pokeball</button>
+            <button id="catchButton" class="btn">Lanzá tu pokebola</button>
+            <button id="resetButton" class="btn">Resetear Equipo</button>
         </div>
         <p class="message"></p>
         <div class="team-members">
-            <h3>Team Members:</h3>
+            <h3>Miembros de tu equipo:</h3>
             <div class="row row-cols-1 row-cols-md-3 g-4 card-grid" id="teamList"></div>
         </div>
         <p class="message"></p>
-<p class="pokeballs-left">Pokéballs Left: 20</p>
+        <p class="pokeballs-left">Pokebolas Restantes: 20</p>
     </div>
-    
+
 
     <div id="confirmationModal" class="modal">
         <div class="modal-content">
             <p class="modal-message"></p>
             <div class="modal-buttons">
-                <button id="confirmCatchButton" class="btn">Yes</button>
+                <button id="confirmCatchButton" class="btn">Si</button>
                 <button id="cancelCatchButton" class="btn">No</button>
             </div>
         </div>
     </div>
 
     <script src="js/api.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Your JavaScript code here
-        });
-    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
