--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>Pokémon Catcher</h2>
         <div class="form-group">
             <label for="pokemonId">Pokémon ID:</label>
-            <input type="text" id="pokemonId" placeholder="Ingresá el ID de tu Pokémon">
+            <input type="text" id="pokemonId" placeholder="Ingresá el N° de tu Pokémon">
         </div>
         <div class="form-group">
             <button id="catchButton" class="btn">Lanzá tu pokeball</button>
